<resources>
    <string name="app_name">GameDesign</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="show_username">USERNAME</string>
    <string name="show_password">PASSWORD</string>
    <string name="go_back">BACK</string>
    <string name="enter_username">Enter Your Username</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="start_newgame">NEW GAME</string>
    <string name="resume_game">RESUME GAME</string>
    <string name="playstore">STORE, comming soon</string>
    <string name="game_setting">SETTING</string>
    <string name="game_rank">PLAYER RANKING, comming soon</string>
    <string name="choose_theme">THEME</string>
    <string name="choose_icon">ICON</string>
    <string name="game_jumpingball">Jumping Ball</string>
    <string name="game_nowhiteblock">Don\'t Touch White Block</string>
    <string name="game_hangman">Hangman</string>
    <string name="theme_dark">DARK</string>
    <string name="theme_light">LIGHT</string>
    <string name="logout_of_game">LOG OUT</string>
    <string name="ResurrectionKey">Resurrection Key</string>
    <string name="Icon1">Icon 1</string>
    <string name="Icon2">Icon 2</string>
    <string name="Icon3">Icon 3</string>
    <string name="Icon4">Icon 4</string>
    <string name="load_game">LOAD GAME</string>
    <string name="save_and_exit">SAVE AND EXIT</string>
    <string name="exit_the_game">Exit the game?</string>
    <string name="choose_your_theme">Choose Your Theme</string>
    <string name="save_theme">Save Theme</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="button">Button</string>
    <string name="pink">Pink</string>
    <string name="blue">Blue</string>
    <string name="don_t_tap_white_tiles">Don\'t Tap White Tiles</string>
    <string name="save_game">SAVE GAME</string>
    <string name="title_activity_change_theme">ChangeThemeAct</string>
    <string name="score">Score</string>
    <string name="gold">Gold</string>
    <string name="i1">i1</string>
    <string name="i2">i2</string>
    <string name="i3" />
    <string name="i4">i4</string>
    <string name="i03">i3</string>
    <string name="moon">MOON</string>
    <string name="mink">MINK</string>
    <string name="peach" />
    <string name="peach_n">PEACH</string>
    <string name="orange">ORANGE</string>
    <string name="textcolor">Text Color</string>
    <string name="menu_icon">menu_icon</string>
    <string name="score_board">Score Board</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="Tiles">Don\'t touch white</string>
    <string name="store">STORE</string>
    <string name="playerRanking">PLAYER RANKING</string>
    <string name="startnewgame">Start New Game</string>
    <string name="continuegame">Continue Last Game</string>
    <string name="Level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="magicalItemPrice">$100</string>
    <string name="IconPrice">300$</string>
    <string name="no_data">NONE</string>
</resources>
