<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/exit_the_game"
        android:textSize="40sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/exit_resume"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/resume_game"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/exit_save"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/save_and_exit"
        android:textColor="@android:color/white" />
</LinearLayout>