<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gamestartactivity.HangmanActivityStart">

    <View
        android:id="@+id/game_page_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game_page_resume"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="164dp"
        android:text="@string/load_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_game" />

    <Button
        android:id="@+id/game_page_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="20dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_page_resume"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/new_game_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startnewgame"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/game_page_background"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="@+id/game_page_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <TextView
        android:id="@+id/continue_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuegame"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/game_page_background"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="@+id/game_page_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/level1_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="@string/Level1"
        app:layout_constraintBottom_toTopOf="@+id/level2_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/game_page_background"
        app:layout_constraintVertical_bias="0.054" />

    <Button
        android:id="@+id/level2_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/level2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/level3_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/level3"
        app:layout_constraintBottom_toBottomOf="@+id/game_page_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />

</androidx.constraintlayout.widget.ConstraintLayout>